--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,13 +2,6 @@
 import Layout from "../layouts/home-layout.astro";
 ---
 
-<!-- <Head>
-        <title>Home | Sergen Karaoglan</title>
-        <meta
-          name="description"
-          content="Portfolio homepage of Sergen Karaoglan"
-        />
-      </Head> -->
 <Layout
   title="Home | Sergen Karaoglan"
   description="Portfolio homepage of Sergen Karaoglan"
@@ -70,7 +63,7 @@ import Layout from "../layouts/home-layout.astro";
               </h3>
             </div>
             <p class="mt-1 text-sm text-gray-500">
-              Next.js, Tailwind, React Three Fiber
+              Tailwind, React Three Fiber
             </p>
             <p class="mt-1 text-sm text-gray-900">
               Interact with and learn to create fractal trees with React Three
