--- a/src/layouts/home-layout.astro
+++ b/src/layouts/home-layout.astro
@@ -1,6 +1,7 @@
 ---
 import Navbar from "../components/navbar.astro";
 import Footer from "../components/footer";
+import '../styles/global.css';
 const { title, description } = Astro.props
 ---
 
