--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ const project_list = [
     technologies: ["Tailwind", "React Three Fiber, MDX"],
     description:
       "Interact with and learn to create fractal trees with React Three Fiber.",
-    demo: "/fractal-trees",
+    demo: "/projects/fractal-trees",
     github: "https://github.com/SergenKaraoglan/sergen-karaoglan-portfolio/blob/main/src/components/fractal-tree.jsx",
     type: "Procedural art",
   },
