--- a/src/layouts/home-layout.astro
+++ b/src/layouts/home-layout.astro
@@ -1,6 +1,6 @@
 ---
 import Navbar from "../components/navbar.astro";
-import Footer from "../components/footer";
+import Footer from "../components/footer.astro";
 import '../styles/global.css';
 const { title, description } = Astro.props
 ---
