--- a/src/layouts/home-layout.astro
+++ b/src/layouts/home-layout.astro
@@ -22,6 +22,6 @@ const { title, description } = Astro.props
     <main>
       <slot />
     </main>
-    <Footer client:idle />
+    <Footer />
   </body>
 </html>
