--- a/src/pages/projects/ThreeDMath.astro
+++ b/src/pages/projects/ThreeDMath.astro
@@ -2,7 +2,53 @@
 ---
 
 <script is:inline>
-  //let ctx = document.getElementById('1d').getContext('2d');
+  window.onload = function () {
+    const canvas = document.getElementById("2d");
+    const ctx = canvas.getContext("2d");
+    const width = canvas.width;
+    const height = canvas.height;
+
+    ctx.lineWidth = 5;
+    //ctx.strokeStyle = "blue";
+    ctx.lineCap = "round";
+
+    const cursor = {
+      x: width / 2,
+      y: height / 2,
+    };
+
+    canvas.addEventListener("mousemove", (e) => {
+      cursor.x = e.offsetX;
+      cursor.y = e.offsetY;
+    });
+
+    function draw() {
+      // draw x and y axis lines
+      ctx.moveTo(0, 0);
+      ctx.lineTo(0, height);
+      ctx.stroke();
+
+      ctx.moveTo(0, height);
+      ctx.lineTo(width, height);
+      ctx.stroke();
+
+      // draw x and y axis
+      ctx.fillText("X", 15, height - 5);
+      ctx.fillText("Y", 5, height - 15);
+
+      // draw circle
+      ctx.beginPath();
+      ctx.arc(cursor.x, cursor.y, 5, 0, 2 * Math.PI);
+      ctx.fill();
+    }
+
+    function anim() {
+      requestAnimationFrame(anim);
+      ctx.clearRect(0, 0, width, height);
+      draw();
+    }
+    anim();
+  };
 
   function set1dValue(slider) {
     const oned = document.getElementById("1d");
@@ -11,10 +57,13 @@
 </script>
 
 <div class="mx-auto my-3 w-fit">
-  <div id="1d" class="w-52 h-52 flex justify-center items-center text-5xl">
+  <div
+    id="1d"
+    class="w-52 h-52 flex justify-center items-center text-5xl border-2"
+  >
     0
   </div>
-  <div class="flex justify-center">
+  <div class="flex justify-center my-3">
     <input
       class="appearance-none bg-blue-500 rounded-lg h-1 thumb-lg-blue-600"
       type="range"
@@ -25,3 +74,5 @@
     />
   </div>
 </div>
+
+<canvas id="2d" width="300" height="300" class="border-2 mx-auto my-5"></canvas>
