--- a/src/pages/bab.astro
+++ b/src/pages/bab.astro
@@ -2,3 +2,5 @@
 import FractalTree from "../components/fractal-tree.svelte";
 ---
 <FractalTree client:only/>
+<FractalTree client:only/>
+<FractalTree client:only/>
