Remove all of React (Please never again)

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,9 +3,9 @@ import Layout from "../layouts/home-layout.astro";
 
 const project_list = [
   {
-    title: "Fractal Trees with React Three Fiber",
+    title: "Fractal Tree",
     image: "/fractal-tree.png",
-    technologies: ["Tailwind", "React Three Fiber, MDX"],
+    technologies: ["Tailwind", "Babylon.js", "Svelte"],
     description:
       "Interact with and learn to create fractal trees with React Three Fiber.",
     demo: "/projects/fractal-trees",
