--- a/src/pages/bab.astro
+++ b/src/pages/bab.astro
@@ -1,4 +1,7 @@
 ---
 import FractalTree from "../components/fractal-tree.svelte";
+import Rotation from "../components/rotation-points.svelte";
 ---
 <FractalTree client:only/>
+<Rotation client:only/>
+```
