visualise centre of rotation

--- a/src/pages/bab.astro
+++ b/src/pages/bab.astro
@@ -2,6 +2,6 @@
 import FractalTree from "../components/fractal-tree.svelte";
 import Rotation from "../components/rotation-points.svelte";
 ---
-<FractalTree client:only/>
+<FractalTree client:only showAngle={true} showDepth={true}/>
 <Rotation client:only/>
 ```
