--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ const project_list = [
           <h1
             class="text-4xl font-medium tracking-tight text-white sm:text-6xl"
           >
-            Developing web apps on STEM, games and procedural art
+            Developing interactive tutorials on STEM, games and procedural art
           </h1>
           <div class="mt-10 flex items-center justify-center gap-x-6">
             <a
