--- a/src/pages/bab.astro
+++ b/src/pages/bab.astro
@@ -1,8 +1,7 @@
 ---
 import FractalTree from "../components/fractal-tree.svelte";
-import Rotation from "../components/rotation-points.svelte";   
+import Rotation from "../components/rotation-points.svelte";
 ---
 
-<FractalTree client:only showAngle={true} showDepth={true}/>
-<Rotation client:only/>
-
+<!-- <FractalTree client:only showAngle={true} showDepth={true}/>
+<Rotation client:only/> -->
