--- a/src/components/2D.astro
+++ b/src/components/2D.astro
@@ -1,8 +1,9 @@
-<script>
-  import {onMount} from "svelte";
+---
+---
 
-  let canvas;
-   onMount(() => {
+<script is:inline>
+  window.onload = function () {
+    const canvas = document.getElementById("2d");
     const ctx = canvas.getContext("2d");
     const width = canvas.width;
     const height = canvas.height;
@@ -47,7 +48,7 @@
       draw();
     }
     anim();
-  });
+  };
 </script>
 
-<canvas bind:this={canvas} width="300" height="300" class="border-2 mx-auto my-5"></canvas>
+<canvas id="2d" width="300" height="300" class="border-2 mx-auto my-5"></canvas>
