--- a/src/components/DOM-Tree.astro
+++ b/src/components/DOM-Tree.astro
@@ -1,7 +1,6 @@
 <script>
     import * as d3 from "d3";
 
-    let svg_container;
     let html = `
   <html>
     <body>
@@ -130,9 +129,7 @@ console.log(tree_svg);
 
 document.getElementById('svg-container').append(tree_svg);
 
-function parseTree(){}
-
 </script>
 
-<div bind:this={svg_container}></div>
-<input type="text" id="html-input" value="Hello World!" on:input={parseTree}>
+<div id="svg-container"></div>
+<input type="text" id="html-input" value="Hello World!" oninput="parseTree()">
