--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,17 +1,18 @@
-<script>
-    import image from "$lib/assets/astronaut.png"
-    import { page } from '$app/stores';
-</script>
-<div class="relative isolate h-screen">
+---
+import Layout from "../layouts/home-layout.astro";
+---
+
+<Layout title = '404 | Sergen Karaoglan'>
+  <div class="relative isolate h-screen">
     <img
-      src={image}
+      src="/astronaut.png"
       alt="astronaut floating in space"
       class="absolute inset-0 -z-10 h-full w-full object-cover object-top opacity-50"
     />
     <div class="mx-auto max-w-7xl px-6 py-32 text-center sm:py-40 lg:px-8">
-      <p class="text-base font-semibold leading-8 text-black">{$page.status}</p>
+      <p class="text-base font-semibold leading-8 text-black">404</p>
       <h1 class="mt-4 text-3xl font-bold tracking-tight text-black sm:text-5xl">
-        {$page.error.message}
+        Page not found
       </h1>
       <p class="mt-4 text-base text-black/70 sm:mt-6"></p>
       <div class="mt-10 flex justify-center">
@@ -20,4 +21,5 @@
         </a>
       </div>
     </div>
-</div>
+  </div>
+</Layout>
