--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,26 +1,26 @@
-<script>
-  import treeimage from "$lib/assets/fractal-tree.png"
+---
+import Layout from "../layouts/home-layout.astro";
+import { Picture } from '@astrojs/image/components';
 
 const project_list = [
   {
     title: "Fractal Tree",
-    image: treeimage,
+    image: "/fractal-tree.png",
     technologies: ["Tailwind", "Babylon.js", "Svelte"],
     description:
       "Interact with and learn to create fractal trees.",
-    demo: "/fractal-tree",
+    demo: "/projects/fractal-trees",
     github: "https://github.com/SergenKaraoglan/sergen-karaoglan-portfolio/blob/main/src/components/fractal-tree.jsx",
     type: "Procedural art",
   },
 ];
-</script>
+---
 
-<svelte:head>
-    <title>Home | Sergen Karaoglan</title>
-    <meta name="description" content="Portfolio homepage of Sergen Karaoglan" />
-</svelte:head>
-
-<div
+<Layout
+  title="Home | Sergen Karaoglan"
+  description="Portfolio homepage of Sergen Karaoglan"
+>
+  <div
     class="relative overflow-hidden min-h-screen w-full pb-16 sm:pb-24 lg:pb-32"
   >
     <video
@@ -39,7 +39,7 @@ const project_list = [
           <h1
             class="text-4xl font-medium tracking-tight text-white sm:text-6xl"
           >
-            Interactive tutorials on STEM, games and procedural art
+            Developing interactive tutorials on STEM, games and procedural art
           </h1>
           <div class="mt-10 flex items-center justify-center gap-x-6">
             <a
@@ -65,8 +65,9 @@ const project_list = [
     >
       Projects
     </h2>
-    <ul class="grid grid-cols-1 gap-6 sm:grid-cols-2">
-      {#each project_list as data}
+    <ul role="list" class="grid grid-cols-1 gap-6 sm:grid-cols-2">
+      {
+        project_list.map((data) => 
       <li
         class="col-span-2 divide-y divide-gray-200 rounded-lg bg-white shadow"
       >
@@ -85,10 +86,13 @@ const project_list = [
             </p>
           </div>
           <div class="h-auto w-1/4 flex-shrink-0">
-          <img
+          <Picture
             src={data.image}
             alt={data.title}
-            >
+            //height={100}
+            widths={[300, 400]}
+            aspectRatio="4:3"
+          />
           </div>
         </div>
         <div>
@@ -138,7 +142,7 @@ const project_list = [
           </div>
         </div>
       </li>
-        {/each}
+    )}
     </ul>
   </div>
-
+</Layout>
