fix firefox thumb style

--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .thumb-lg-blue-700::-webkit-slider-thumb {
-    -webkit-appearance: none; /* Override default look */
+    -webkit-appearance: none;
     appearance: none;
     background-color: #1d4ed8;
     height: 1.5rem;
@@ -11,8 +11,18 @@
     border-radius: 100%;
   }
 
+  .thumb-lg-blue-700::-moz-range-thumb {
+    -moz-appearance: none;
+    appearance: none;
+    background-color: #1d4ed8;
+    height: 1.5rem;
+    width: 1.5rem;
+    border-radius: 100%;
+    border: none;
+  }
+
   .thumb-md-red-500::-webkit-slider-thumb {
-    -webkit-appearance: none; /* Override default look */
+    -webkit-appearance: none; 
     appearance: none;
     background-color: #ef4444;
     height: 1rem;
@@ -21,7 +31,7 @@
   }
   
   .thumb-md-green-500::-webkit-slider-thumb {
-    -webkit-appearance: none; /* Override default look */
+    -webkit-appearance: none; 
     appearance: none;
     background-color: #22c55e;
     height: 1rem;
@@ -30,7 +40,7 @@
   }
 
   .thumb-md-blue-500::-webkit-slider-thumb {
-    -webkit-appearance: none; /* Override default look */
+    -webkit-appearance: none; 
     appearance: none;
     background-color: #3b82f6;
     height: 1rem;
